Refactor JavaScript query selectors for naming consistency
Numerous JavaScript query selectors were updated across several script files to ensure consistency with the CSS class naming refactor. This change enhances code readability and maintenance, fostering easier debugging and development.

--- a/public/app/dashboard.html
+++ b/public/app/dashboard.html
@@ -223,26 +223,26 @@
                     </div>
                     <div class="mod_btn--container w-clearfix">
                         <div class="mod_btn_wrp w-clearfix">
-                            <div mod_swap_action_btn="cancel_swap" class="actions_btn w-clearfix">
+                            <div mod_swap_action-btn="cancel_swap" class="actions_btn w-clearfix">
                                 <div id="modCancBtnIco" class="btn_icon cancel">
                                     <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie"
                                          data-src="documents/chipped-circle-loader-v3.json" data-loop="1"
                                          data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                                          data-default-duration="1" data-duration="0.65"></div>
                                 </div>
-                                <div class="action_btn_text">Cancel</div>
+                                <div class="action-btn-text">Cancel</div>
                             </div>
                         </div>
                         <div confirm_btn="swap" class="mod_btn_wrp w-clearfix">
-                            <div mod_swap_action_btn="confirm_swap" class="actions_btn confirm w-clearfix">
-                                <div action_btn_ico="swap" class="btn_icon swap">
+                            <div mod_swap_action-btn="confirm_swap" class="actions_btn confirm w-clearfix">
+                                <div action-btn_ico="swap" class="btn_icon swap">
                                     <div class="btn_ldr_wrp w-embed">
                                         <lottie-player class="lottie_btn_ldr" ldr_btn_ico="swap"
                                                        src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                         </lottie-player>
                                     </div>
                                 </div>
-                                <div class="action_btn_text">Confirm Swap</div>
+                                <div class="action-btn-text">Confirm Swap</div>
                             </div>
                         </div>
                     </div>
@@ -290,19 +290,19 @@
                 </div>
                 <div class="mod_btn_wrp_allocate w-clearfix">
                     <div class="mod_btn_allocate w-clearfix">
-                        <div mod_remove_action_btn="confirm_remove" class="actions_btn remove w-clearfix">
-                            <div action_btn_ico="remove" class="btn_icon confirm">
+                        <div mod_remove_action-btn="confirm_remove" class="actions_btn remove w-clearfix">
+                            <div action-btn_ico="remove" class="btn_icon confirm">
                                 <div class="btn_ldr_wrp w-embed">
                                     <lottie-player class="lottie_btn_ldr" ldr_btn_ico="remove"
                                                    src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                     </lottie-player>
                                 </div>
                             </div>
-                            <div class="action_btn_text">Confirm Removal</div>
+                            <div class="action-btn-text">Confirm Removal</div>
                         </div>
                     </div>
                     <div class="mod_btn_wrp w-clearfix">
-                        <div mod_remove_action_btn="cancel_remove" class="actions_btn w-clearfix">
+                        <div mod_remove_action-btn="cancel_remove" class="actions_btn w-clearfix">
                             <div id="modCancBtnIco" class="btn_icon cancel">
                                 <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie"
                                      data-src="documents/chipped-circle-loader-v3.json" data-loop="1"
@@ -310,7 +310,7 @@
                                      data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                                      data-default-duration="1" data-duration="0.65"></div>
                             </div>
-                            <div class="action_btn_text">Cancel</div>
+                            <div class="action-btn-text">Cancel</div>
                         </div>
                     </div>
                 </div>
@@ -536,7 +536,7 @@
                                                      data-renderer="svg" data-default-duration="1"
                                                      data-duration="0.65"></div>
                                             </div>
-                                            <div class="action_btn_text">Basic</div>
+                                            <div class="action-btn-text">Basic</div>
                                         </div>
                                         <div id="modAuthWhliBtn" class="actions_btn w-clearfix">
                                             <div id="modWhliAuthBtnIco" class="btn_icon signal">
@@ -548,7 +548,7 @@
                                                      data-renderer="svg" data-default-duration="1"
                                                      data-duration="0.65"></div>
                                             </div>
-                                            <div class="action_btn_text">Whitelist</div>
+                                            <div class="action-btn-text">Whitelist</div>
                                         </div>
                                     </div>
                                     <div class="auth_basic_input_wrp">
@@ -640,7 +640,7 @@
                                                     </lottie-player>
                                                 </div>
                                             </div>
-                                            <div class="action_btn_text">Change IP</div>
+                                            <div class="action-btn-text">Change IP</div>
                                         </div>
                                         <div id="modCpyChIpLnkBtn" class="actions_btn w-clearfix">
                                             <div id="modCpyChIpLnkBtnIco" class="btn_icon link">
@@ -650,9 +650,9 @@
                                                     </lottie-player>
                                                 </div>
                                             </div>
-                                            <div class="action_btn_text">Change IP Link</div>
+                                            <div class="action-btn-text">Change IP Link</div>
                                         </div>
-                                        <div mod_action_btn="swap" class="actions_btn w-clearfix">
+                                        <div mod_action-btn="swap" class="actions_btn w-clearfix">
                                             <div class="btn_icon switch">
                                                 <div class="btn_ldr_wrp w-embed">
                                                     <lottie-player class="lottie_btn_ldr" id="modSwitchDeviceLdr"
@@ -660,7 +660,7 @@
                                                     </lottie-player>
                                                 </div>
                                             </div>
-                                            <div class="action_btn_text">Swap</div>
+                                            <div class="action-btn-text">Swap</div>
                                         </div>
                                         <div id="modPowerCycleBtn" class="actions_btn w-clearfix">
                                             <div id="modPowerCycleBtnIco" class="btn_icon battery">
@@ -670,7 +670,7 @@
                                                     </lottie-player>
                                                 </div>
                                             </div>
-                                            <div class="action_btn_text">Power Cycle</div>
+                                            <div class="action-btn-text">Power Cycle</div>
                                         </div>
                                     </div>
                                     <div class="w-container">
@@ -1252,7 +1252,7 @@
                                     <div class="skel_mod">
                                         <div class="skel_mod_bg"></div>
                                     </div>
-                                    <div mod_action_btn="remove" class="actions_btn remove w-clearfix">
+                                    <div mod_action-btn="remove" class="actions_btn remove w-clearfix">
                                         <div id="modRmvBtnIco" class="btn_icon trash">
                                             <div id="modRmvBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie"
                                                  data-src="documents/chipped-circle-loader-v3.json" data-loop="1"
@@ -1260,7 +1260,7 @@
                                                  data-renderer="svg" data-default-duration="1"
                                                  data-duration="0.65"></div>
                                         </div>
-                                        <div class="action_btn_text">Remove</div>
+                                        <div class="action-btn-text">Remove</div>
                                     </div>
                                 </div>
                                 <div class="mod_btn_wrp hide w-clearfix">
@@ -1275,7 +1275,7 @@
                                                  data-renderer="svg" data-default-duration="1"
                                                  data-duration="0.65"></div>
                                         </div>
-                                        <div class="action_btn_text">Report Issue</div>
+                                        <div class="action-btn-text">Report Issue</div>
                                     </div>
                                 </div>
                             </div>
@@ -1294,7 +1294,7 @@
                                                 </lottie-player>
                                             </div>
                                         </div>
-                                        <div class="action_btn_text">Confirm Changes</div>
+                                        <div class="action-btn-text">Confirm Changes</div>
                                     </div>
                                 </div>
                                 <div class="mod_btn_wrp w-clearfix">
@@ -1309,7 +1309,7 @@
                                                  data-renderer="svg" data-default-duration="1"
                                                  data-duration="0.65"></div>
                                         </div>
-                                        <div class="action_btn_text">Go Back</div>
+                                        <div class="action-btn-text">Go Back</div>
                                     </div>
                                 </div>
                             </div>
