--- a/public/app/funds.html
+++ b/public/app/funds.html
@@ -79,20 +79,20 @@
                                 </div>
                             </div>
                             <div class="options_btn--grid">
-                                <div add_funds_btn="500" class="action_btn add_funds w-clearfix">
-                                    <div class="action_btn-text font_12">$500</div>
+                                <div add_funds_btn="500" class="action-btn add_funds w-clearfix">
+                                    <div class="action-btn-text font_12">$500</div>
                                 </div>
-                                <div add_funds_btn="300" class="action_btn add_funds w-clearfix">
-                                    <div class="action_btn-text font_12">$300</div>
+                                <div add_funds_btn="300" class="action-btn add_funds w-clearfix">
+                                    <div class="action-btn-text font_12">$300</div>
                                 </div>
-                                <div add_funds_btn="100" class="action_btn add_funds w-clearfix">
-                                    <div class="action_btn-text font_12">$100</div>
+                                <div add_funds_btn="100" class="action-btn add_funds w-clearfix">
+                                    <div class="action-btn-text font_12">$100</div>
                                 </div>
-                                <div add_funds_btn="25" class="action_btn add_funds w-clearfix">
-                                    <div class="action_btn-text font_12">$25</div>
+                                <div add_funds_btn="25" class="action-btn add_funds w-clearfix">
+                                    <div class="action-btn-text font_12">$25</div>
                                 </div>
-                                <div add_funds_btn="0" class="action_btn add_funds green w-clearfix">
-                                    <div class="action_btn-text font_12">Other</div>
+                                <div add_funds_btn="0" class="action-btn add_funds green w-clearfix">
+                                    <div class="action-btn-text font_12">Other</div>
                                 </div>
                             </div>
                             <div funds_crd="custom" class="fund_crd green">
@@ -281,7 +281,7 @@
                                     <div class="skel_checkout_bg"></div>
                                 </div>
                                 <div checkout_btn="continue" class="checkout_btn continue w-clearfix">
-                                    <div checkout_btn_continue="text" class="action_btn_text">Continue</div>
+                                    <div checkout_btn_continue="text" class="action-btn-text">Continue</div>
                                     <div checkout_btn_continue="ico" class="checkout_btn_ico continue">
                                         <div class="btn_ldr_wrp w-embed">
                                             <lottie-player class="lottie_btn_ldr" id="checkoutBtnContinueLdr"
@@ -303,7 +303,7 @@
                                      data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                                      data-default-duration="1" data-duration="0.65"></div>
                             </div>
-                            <div class="action_btn_text">Go Back</div>
+                            <div class="action-btn-text">Go Back</div>
                         </div>
                         <div class="w-layout-grid pymnt_optn_crd_grid">
                             <div payment_method="crypto" class="sect_crd small2">
