--- a/public/app/index.html
+++ b/public/app/index.html
@@ -85,7 +85,7 @@
                     <div class="sb_btn-wrp w-clearfix">
                         <a href="app/dashboard" class="sb_btn black w-inline-block w-clearfix">
                             <div checkout_btn_continue="ico" class="sb_btn_ico dash"></div>
-                            <div checkout_btn_continue="text" class="action_btn_text">Dashboard</div>
+                            <div checkout_btn_continue="text" class="action-btn-text">Dashboard</div>
                         </a>
                     </div>
                 </div>
