--- a/public/app/new.html
+++ b/public/app/new.html
@@ -150,7 +150,7 @@
                                     </lottie-player>
                                 </div>
                             </div>
-                            <div class="action_btn_text">Confirm Deployment</div>
+                            <div class="action-btn-text">Confirm Deployment</div>
                         </div>
                     </div>
                     <div class="mod_btn_wrp w-clearfix">
@@ -161,7 +161,7 @@
                                      data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                                      data-default-duration="1" data-duration="0.65"></div>
                             </div>
-                            <div class="action_btn_text">Cancel</div>
+                            <div class="action-btn-text">Cancel</div>
                         </div>
                     </div>
                 </div>
@@ -238,21 +238,21 @@
                             </div>
                         </div>
                         <div class="new_btns_wrp w-clearfix">
-                            <div action_btns="period" current_period="hourly" class="new_crd_btn_grid">
-                                <div period_btn="yearly" class="new_action_btn w-clearfix">
-                                    <div class="new_action_btn_txt">Yearly</div>
+                            <div action-btns="period" current_period="hourly" class="new_crd_btn_grid">
+                                <div period_btn="yearly" class="new_action-btn w-clearfix">
+                                    <div class="new_action-btn_txt">Yearly</div>
                                 </div>
-                                <div period_btn="monthly" class="new_action_btn w-clearfix">
-                                    <div class="new_action_btn_txt">Monthly</div>
+                                <div period_btn="monthly" class="new_action-btn w-clearfix">
+                                    <div class="new_action-btn_txt">Monthly</div>
                                 </div>
-                                <div period_btn="weekly" class="new_action_btn w-clearfix">
-                                    <div class="new_action_btn_txt">Weekly</div>
+                                <div period_btn="weekly" class="new_action-btn w-clearfix">
+                                    <div class="new_action-btn_txt">Weekly</div>
                                 </div>
-                                <div period_btn="daily" class="new_action_btn w-clearfix">
-                                    <div class="new_action_btn_txt">Daily</div>
+                                <div period_btn="daily" class="new_action-btn w-clearfix">
+                                    <div class="new_action-btn_txt">Daily</div>
                                 </div>
-                                <div period_btn="hourly" class="new_action_btn green w-clearfix">
-                                    <div class="new_action_btn_txt">Hourly</div>
+                                <div period_btn="hourly" class="new_action-btn green w-clearfix">
+                                    <div class="new_action-btn_txt">Hourly</div>
                                 </div>
                             </div>
                         </div>
@@ -808,7 +808,7 @@
                                 <div class="skel_checkout_bg"></div>
                             </div>
                             <div checkout_btn="continue" class="checkout_btn continue w-clearfix">
-                                <div checkout_btn_continue="text" class="action_btn_text">Continue</div>
+                                <div checkout_btn_continue="text" class="action-btn-text">Continue</div>
                                 <div checkout_btn_continue="ico" class="checkout_btn_ico continue">
                                     <div class="btn_ldr_wrp w-embed">
                                         <lottie-player class="lottie_btn_ldr" id="checkoutBtnContinueLdr"
@@ -818,7 +818,7 @@
                                 </div>
                             </div>
                             <div checkout_btn="issue" class="checkout_btn issue w-clearfix">
-                                <div checkout_btn_issue="text" class="action_btn_text">Add Required Funds</div>
+                                <div checkout_btn_issue="text" class="action-btn-text">Add Required Funds</div>
                                 <div checkout_btn="ico" class="checkout_btn_ico external">
                                     <div class="btn_ldr_wrp w-embed">
                                         <lottie-player class="lottie_btn_ldr" id="checkoutBtnIssueLdr"
