--- a/public/app/settings/developers.html
+++ b/public/app/settings/developers.html
@@ -123,36 +123,36 @@
                                 <div class="input_embed-wrap w-embed"><input disabled="" api_key="master" type="text"
                                                                               class="ill_input apikey"></div>
                                 <div class="input_btn-wrap two">
-                                    <div class="action_btn-inner w-clearfix">
-                                        <div action_btn_reveal="master" class="actions_btn reveal w-clearfix">
-                                            <div action_btn_ico_reveal="master" class="btn_icon reveal">
+                                    <div class="action-btn-inner w-clearfix">
+                                        <div action-btn_reveal="master" class="actions_btn reveal w-clearfix">
+                                            <div action-btn_ico_reveal="master" class="btn_icon reveal">
                                                 <div class="btn_ldr_wrp w-embed">
                                                     <lottie-player class="lottie_btn_ldr" lottie_ldr_reveal="master"
                                                                    src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                                     </lottie-player>
                                                 </div>
                                             </div>
-                                            <div class="action_btn_text">Reveal</div>
+                                            <div class="action-btn-text">Reveal</div>
                                         </div>
-                                        <div action_btn_roll="master" class="actions_btn roll w-clearfix">
-                                            <div action_btn_ico_roll="master" class="btn_icon dice">
+                                        <div action-btn_roll="master" class="actions_btn roll w-clearfix">
+                                            <div action-btn_ico_roll="master" class="btn_icon dice">
                                                 <div class="btn_ldr_wrp w-embed">
                                                     <lottie-player class="lottie_btn_ldr" lottie_ldr_roll="master"
                                                                    src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                                     </lottie-player>
                                                 </div>
                                             </div>
-                                            <div class="action_btn_text">Roll Key</div>
+                                            <div class="action-btn-text">Roll Key</div>
                                         </div>
-                                        <div action_btn_copy="master" class="actions_btn copy hide w-clearfix">
-                                            <article action_btn_ico_copy="master" class="btn_icon copy1">
+                                        <div action-btn_copy="master" class="actions_btn copy hide w-clearfix">
+                                            <article action-btn_ico_copy="master" class="btn_icon copy1">
                                                 <div class="btn_ldr_wrp w-embed">
                                                     <lottie-player class="lottie_btn_ldr" lottie_ldr_copy="master"
                                                                    src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                                     </lottie-player>
                                                 </div>
                                             </article>
-                                            <div class="action_btn_text">Copy</div>
+                                            <div class="action-btn-text">Copy</div>
                                         </div>
                                     </div>
                                 </div>
@@ -185,36 +185,36 @@
                                                                               type="text" class="ill_input apikey">
                                 </div>
                                 <div class="input_btn-wrap two">
-                                    <div class="action_btn-inner w-clearfix">
-                                        <div action_btn_reveal="change_ip" class="actions_btn reveal w-clearfix">
-                                            <div action_btn_ico_reveal="change_ip" class="btn_icon reveal">
+                                    <div class="action-btn-inner w-clearfix">
+                                        <div action-btn_reveal="change_ip" class="actions_btn reveal w-clearfix">
+                                            <div action-btn_ico_reveal="change_ip" class="btn_icon reveal">
                                                 <div class="btn_ldr_wrp w-embed">
                                                     <lottie-player class="lottie_btn_ldr" lottie_ldr_reveal="change_ip"
                                                                    src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                                     </lottie-player>
                                                 </div>
                                             </div>
-                                            <div class="action_btn_text">Reveal</div>
+                                            <div class="action-btn-text">Reveal</div>
                                         </div>
-                                        <div action_btn_roll="change_ip" class="actions_btn roll w-clearfix">
-                                            <div action_btn_ico_roll="change_ip" class="btn_icon dice">
+                                        <div action-btn_roll="change_ip" class="actions_btn roll w-clearfix">
+                                            <div action-btn_ico_roll="change_ip" class="btn_icon dice">
                                                 <div class="btn_ldr_wrp w-embed">
                                                     <lottie-player class="lottie_btn_ldr" lottie_ldr_roll="change_ip"
                                                                    src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                                     </lottie-player>
                                                 </div>
                                             </div>
-                                            <div class="action_btn_text">Roll Key</div>
+                                            <div class="action-btn-text">Roll Key</div>
                                         </div>
-                                        <div action_btn_copy="change_ip" class="actions_btn copy hide w-clearfix">
-                                            <article action_btn_ico_copy="change_ip" class="btn_icon copy1">
+                                        <div action-btn_copy="change_ip" class="actions_btn copy hide w-clearfix">
+                                            <article action-btn_ico_copy="change_ip" class="btn_icon copy1">
                                                 <div class="btn_ldr_wrp w-embed">
                                                     <lottie-player class="lottie_btn_ldr" lottie_ldr_copy="change_ip"
                                                                    src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                                     </lottie-player>
                                                 </div>
                                             </article>
-                                            <div class="action_btn_text">Copy</div>
+                                            <div class="action-btn-text">Copy</div>
                                         </div>
                                     </div>
                                 </div>
