--- a/public/app/settings/member.html
+++ b/public/app/settings/member.html
@@ -237,10 +237,10 @@
                                 receiving generous savings as seen below.
                             </div>
                         </div>
-                        <div class="action_btn-wrap right w-clearfix">
+                        <div class="action-btn-wrap right w-clearfix">
                             <div class="action-btn-grid-wrap">
-                                <div action_btn="enable_member_start" class="action_btn padw w-clearfix">
-                                    <div class="action_btn-text">Enable</div>
+                                <div action-btn="enable_member_start" class="action-btn padw w-clearfix">
+                                    <div class="action-btn-text">Enable</div>
                                 </div>
                             </div>
                         </div>
@@ -311,12 +311,12 @@
                                 simply create an account and enable this setting afterwards.
                             </div>
                         </div>
-                        <div class="action_btn-wrap right w-clearfix">
+                        <div class="action-btn-wrap right w-clearfix">
                             <div class="action-btn-grid-wrap">
                                 <a href="https://illusory.to/bhw-register" target="_blank"
-                                   class="action_btn w-inline-block">
+                                   class="action-btn w-inline-block">
                                     <div class="btn_icon external"></div>
-                                    <div class="action_btn-text">Create account first</div>
+                                    <div class="action-btn-text">Create account first</div>
                                 </a>
                             </div>
                         </div>
@@ -335,18 +335,18 @@
                         </div>
                         <div class="sect_block-text">Select either one</div>
                         <div class="sect_block-divider"></div>
-                        <div class="action_btn-wrap w-clearfix">
+                        <div class="action-btn-wrap w-clearfix">
                             <div class="action-btn-grid-wrap two">
-                                <div action_btn="is_member" class="action_btn w-clearfix">
-                                    <div action_btn_text="is_member" class="action_btn-text">Yes, I am a member</div>
+                                <div action-btn="is_member" class="action-btn w-clearfix">
+                                    <div action-btn-text="is_member" class="action-btn-text">Yes, I am a member</div>
                                     <div lottie_ldr_wrap="is_member" class="lottie_btn_ldr-wrap middle w-embed">
                                         <lottie-player class="lottie_btn_ldr-icon" lottie_ldr="is_member"
                                                        src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                         </lottie-player>
                                     </div>
                                 </div>
-                                <div action_btn="not_member" class="action_btn w-clearfix">
-                                    <div action_btn_text="not_member" class="action_btn-text">No, not currently</div>
+                                <div action-btn="not_member" class="action-btn w-clearfix">
+                                    <div action-btn-text="not_member" class="action-btn-text">No, not currently</div>
                                     <div lottie_ldr_wrap="not_member" class="lottie_btn_ldr-wrap middle w-embed">
                                         <lottie-player class="lottie_btn_ldr-icon" lottie_ldr="not_member"
                                                        src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
@@ -372,11 +372,11 @@
                             </div>
                         </div>
                         <div class="sect_block-divider"></div>
-                        <div class="action_btn-wrap w-clearfix">
+                        <div class="action-btn-wrap w-clearfix">
                             <div class="action-btn-grid-wrap">
-                                <a href="#" target="_blank" class="action_btn w-inline-block">
+                                <a href="#" target="_blank" class="action-btn w-inline-block">
                                     <div class="btn_icon external"></div>
-                                    <div class="action_btn-text">Go create account</div>
+                                    <div class="action-btn-text">Go create account</div>
                                 </a>
                             </div>
                         </div>
@@ -474,21 +474,21 @@
                                                                                           value="9999-AAAA-8888-7777">
                                     </div>
                                     <div class="input_btn-wrap two">
-                                        <div class="action_btn-inner w-clearfix">
-                                            <div action_btn="copy" class="actions_btn copy w-clearfix">
-                                                <article action_btn_ico="copy" class="btn_icon copy1">
+                                        <div class="action-btn-inner w-clearfix">
+                                            <div action-btn="copy" class="actions_btn copy w-clearfix">
+                                                <article action-btn_ico="copy" class="btn_icon copy1">
                                                     <div lottie_ldr_wrap="copy" class="lottie_btn_ldr-wrap w-embed">
                                                         <lottie-player class="lottie_btn_ldr-icon" lottie_ldr="copy"
                                                                        src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                                         </lottie-player>
                                                     </div>
                                                 </article>
-                                                <div class="action_btn_text">Copy</div>
+                                                <div class="action-btn-text">Copy</div>
                                             </div>
-                                            <a action_btn="fourm" href="https://illusory.to/bhw-reply" target="_blank"
+                                            <a action-btn="fourm" href="https://illusory.to/bhw-reply" target="_blank"
                                                class="actions_btn copy w-inline-block">
                                                 <article class="btn_icon forum"></article>
-                                                <div class="action_btn_text">Forum</div>
+                                                <div class="action-btn-text">Forum</div>
                                             </a>
                                         </div>
                                     </div>
@@ -566,10 +566,10 @@
                             </div>
                         </div>
                         <div class="sect_block-divider"></div>
-                        <div block_content="notify_team" class="action_btn-wrap w-clearfix">
+                        <div block_content="notify_team" class="action-btn-wrap w-clearfix">
                             <div class="action-btn-grid-wrap three">
-                                <div action_btn="notify_team" class="action_btn external w-clearfix">
-                                    <div action_btn_text="notify_team" class="action_btn-text">I’m ready for review
+                                <div action-btn="notify_team" class="action-btn external w-clearfix">
+                                    <div action-btn-text="notify_team" class="action-btn-text">I’m ready for review
                                     </div>
                                     <div lottie_ldr_wrap="notify_team" class="lottie_btn_ldr-wrap middle w-embed">
                                         <lottie-player class="lottie_btn_ldr-icon" lottie_ldr="notify_team"
