--- a/public/app/allocate.html
+++ b/public/app/allocate.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="mod_btn_wrp_allocate w-clearfix">
                     <div class="mod_btn_allocate w-clearfix">
-                        <div mod_allocate_action_btn="confirm_allocate" class="actions_btn confirm w-clearfix">
+                        <div mod_allocate_action-btn="confirm_allocate" class="actions_btn confirm w-clearfix">
                             <div id="modAlloBtnIco" class="btn_icon confirm">
                                 <div class="btn_ldr_wrp w-embed">
                                     <lottie-player class="lottie_btn_ldr" id="modAlloBtnLdr"
@@ -150,18 +150,18 @@
                                     </lottie-player>
                                 </div>
                             </div>
-                            <div class="action_btn_text">Allocate Resources</div>
+                            <div class="action-btn-text">Allocate Resources</div>
                         </div>
                     </div>
                     <div class="mod_btn_wrp w-clearfix">
-                        <div mod_allocate_action_btn="cancel_allocate" class="actions_btn w-clearfix">
+                        <div mod_allocate_action-btn="cancel_allocate" class="actions_btn w-clearfix">
                             <div id="modCancBtnIco" class="btn_icon cancel">
                                 <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie"
                                      data-src="documents/chipped-circle-loader-v3.json" data-loop="1"
                                      data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                                      data-default-duration="1" data-duration="0.65"></div>
                             </div>
-                            <div class="action_btn_text">Cancel</div>
+                            <div class="action-btn-text">Cancel</div>
                         </div>
                     </div>
                 </div>
@@ -341,26 +341,26 @@
                     </div>
                     <div class="mod_btn--container w-clearfix">
                         <div class="mod_btn_wrp w-clearfix">
-                            <div mod_swap_action_btn="cancel_swap" class="actions_btn w-clearfix">
+                            <div mod_swap_action-btn="cancel_swap" class="actions_btn w-clearfix">
                                 <div id="modCancBtnIco" class="btn_icon cancel">
                                     <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie"
                                          data-src="documents/chipped-circle-loader-v3.json" data-loop="1"
                                          data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                                          data-default-duration="1" data-duration="0.65"></div>
                                 </div>
-                                <div class="action_btn_text">Cancel</div>
+                                <div class="action-btn-text">Cancel</div>
                             </div>
                         </div>
                         <div class="mod_btn_wrp w-clearfix">
-                            <div mod_swap_action_btn="confirm_swap" class="actions_btn confirm w-clearfix">
-                                <div action_btn_ico="swap" class="btn_icon swap">
+                            <div mod_swap_action-btn="confirm_swap" class="actions_btn confirm w-clearfix">
+                                <div action-btn_ico="swap" class="btn_icon swap">
                                     <div class="btn_ldr_wrp w-embed">
                                         <lottie-player class="lottie_btn_ldr" ldr_btn_ico="swap"
                                                        src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                         </lottie-player>
                                     </div>
                                 </div>
-                                <div class="action_btn_text">Confirm Swap</div>
+                                <div class="action-btn-text">Confirm Swap</div>
                             </div>
                         </div>
                     </div>
@@ -408,26 +408,26 @@
                 </div>
                 <div class="mod_btn_wrp_allocate w-clearfix">
                     <div class="mod_btn_allocate w-clearfix">
-                        <div mod_remove_action_btn="confirm_remove" class="actions_btn remove w-clearfix">
-                            <div action_btn_ico="remove" class="btn_icon confirm">
+                        <div mod_remove_action-btn="confirm_remove" class="actions_btn remove w-clearfix">
+                            <div action-btn_ico="remove" class="btn_icon confirm">
                                 <div class="btn_ldr_wrp w-embed">
                                     <lottie-player class="lottie_btn_ldr" ldr_btn_ico="remove"
                                                    src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                                     </lottie-player>
                                 </div>
                             </div>
-                            <div class="action_btn_text">Confirm Removal</div>
+                            <div class="action-btn-text">Confirm Removal</div>
                         </div>
                     </div>
                     <div class="mod_btn_wrp w-clearfix">
-                        <div mod_remove_action_btn="cancel_remove" class="actions_btn w-clearfix">
+                        <div mod_remove_action-btn="cancel_remove" class="actions_btn w-clearfix">
                             <div id="modCancBtnIco" class="btn_icon cancel">
                                 <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie"
                                      data-src="documents/chipped-circle-loader-v3.json" data-loop="1"
                                      data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                                      data-default-duration="1" data-duration="0.65"></div>
                             </div>
-                            <div class="action_btn_text">Cancel</div>
+                            <div class="action-btn-text">Cancel</div>
                         </div>
                     </div>
                 </div>
@@ -470,7 +470,7 @@
                     <div class="sb_btn-wrp w-clearfix">
                         <a href="dashboard" class="sb_btn black w-inline-block w-clearfix">
                             <div checkout_btn_continue="ico" class="sb_btn_ico dash"></div>
-                            <div checkout_btn_continue="text" class="action_btn_text">Dashboard</div>
+                            <div checkout_btn_continue="text" class="action-btn-text">Dashboard</div>
                         </a>
                     </div>
                 </div>
@@ -1418,7 +1418,7 @@
                             <div class="skel_checkout_bg"></div>
                         </div>
                         <div checkout_btn="continue" class="checkout_btn continue w-clearfix">
-                            <div checkout_btn_continue="text" class="action_btn_text">Continue</div>
+                            <div checkout_btn_continue="text" class="action-btn-text">Continue</div>
                             <div checkout_btn_continue="ico" class="checkout_btn_ico continue">
                                 <div class="btn_ldr_wrp w-embed">
                                     <lottie-player class="lottie_btn_ldr" id="checkoutBtnContinueLdr"
@@ -1428,7 +1428,7 @@
                             </div>
                         </div>
                         <div checkout_btn="issue" class="checkout_btn issue w-clearfix">
-                            <div checkout_btn_issue="text" class="action_btn_text">Add Required Funds</div>
+                            <div checkout_btn_issue="text" class="action-btn-text">Add Required Funds</div>
                             <div checkout_btn="ico" class="checkout_btn_ico external">
                                 <div class="btn_ldr_wrp w-embed">
                                     <lottie-player class="lottie_btn_ldr" id="checkoutBtnIssueLdr"
