--- a/public/app/sign-in.html
+++ b/public/app/sign-in.html
@@ -56,7 +56,7 @@
                              data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1"
                              data-duration="0.65"></div>
                     </div>
-                    <div class="action_btn_text">Go Back</div>
+                    <div class="action-btn-text">Go Back</div>
                 </div>
                 <div class="w-layout-grid pymnt_optn_crd_grid">
                     <div payment_method="crypto" class="sect_crd small2">
