Update action button behavior on help page
Enhanced the interaction with action buttons on the help page by implementing click event handlers for 'issue-area' and 'issue-severity' buttons. As a result, these buttons now properly handle classes and attributes during various events, providing for a better user experience. This change does not affect the 'is_member' click function.

--- a/public/app/help.html
+++ b/public/app/help.html
@@ -365,7 +365,7 @@
                   <div data-action-btn-issue-service="website" class="action-btn w-clearfix">
                     <div action-btn-text-issue-service="website" class="action-btn-text">Website</div>
                   </div>
-                  <div action-btn-issue-service="none" data-selected="true" class="action-btn green w-clearfix" aria-selected="true">
+                  <div action-btn-issue-service="none" data-selected="true" class="action-btn green w-clearfix">
                     <div action-btn-text-issue-service="none" class="action-btn-text">No particular service</div>
                   </div>
                 </div>
